fixed table working on firefox

--- a/app/assets/stylesheets/bootstrap.css.less
+++ b/app/assets/stylesheets/bootstrap.css.less
@@ -151,12 +151,12 @@ table.items-list, thead.header-fixed {
     input {
       opacity:0.25;
     }
-    background-image: -moz-linear-gradient(top, #eee 75%, #ddd 100%); /* FF3.6+ */
+    background-image: -moz-linear-gradient(left, #eee 75%, #ddd 100%); /* FF3.6+ */
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(75%,#eeeeee), color-stop(100%,#dddddd)); /* Chrome,Safari4+ */
     background-image: -webkit-linear-gradient(left, #eee 75%,#ddd 100%); /* Chrome 10+,Safari 5.1+ */
-    background-image: -ms-linear-gradient(top, #eee 75%,#ddd 100%); /* IE10+ */
-    background-image: -o-linear-gradient(top, #eee 75%,#ddd 100%); /* Opera 11.10+ */
-    background-image: linear-gradient(top, #eee 75%,#ddd 100%); /* W3C */
+    background-image: -ms-linear-gradient(left, #eee 75%,#ddd 100%); /* IE10+ */
+    background-image: -o-linear-gradient(left, #eee 75%,#ddd 100%); /* Opera 11.10+ */
+    background-image: linear-gradient(left, #eee 75%,#ddd 100%); /* W3C */
   }
   th {
     border-top:0px;
